fix(a11y): menu first in tab order, explicit z-index

--- a/src/index.css
+++ b/src/index.css
@@ -317,6 +317,7 @@ a {
   padding: 1rem;
   padding-top: calc(1rem + env(safe-area-inset-top));
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 4rem;
   right: 4rem;
